2006-04-04  Allan Sandfeld Jensen <kde@carewolf.com>

        Make so-called nondeterministic CSS matching work

        * css/cssstyleselector.{h,cpp} (checkSubSelector/checkOneSelector):
            Extract combinator matching from checkSelector and make it a recursive function. Clean-up checkOneSelector.

2006-03-25  Germain Garand  <germain@ebooksfrance.org>

        Scope: fix handling of nested/external scripts in the tokenizer (#91701)

        * misc/stringit.h (TokenizerQueue): a LIFO stack of TokenizerStrings
        * html/htmltokenizer.{h,cpp} (scriptHandler/write/notifyFinished): use a TokenizerQueue to store
        postponed fragments while executing/loading scripts.
        (fixUpChar): unrelated - fill in missing unicode replacements.

2006-03-20  Dirk Mueller <mueller@kde.org>

	* misc/loader.cpp: fix pixmap leak in tiled_pixmap()

2006-03-20  Allan Sandfeld Jensen <kde@carewolf.com>

        Improve the CSS :lang() selector to match clarified specification

        * khtml_part.cpp: parse HTTP content-language
        * xml/dom_docimpl.cpp: parse HTTP-EQUIV content-language
        * css/cssstyleselector.cpp: match :lang() against parents and ultimately the document

2006-03-07  Germain Garand  <germain@ebooksfrance.org>

        Scope: relayout/repaint/widget masks fixes. Refine stacking context exploration. Optimise.

        * khtmlview.cpp (drawContents): use widget geometry rather than the RenderWidget's rect (fixes widget borders not being updated)
        Check if widget is in the dirty rect before doing any work.

        * rendering/render_block.cpp (layoutBlockChildren): I meant !child->isPositioned() here, not isPositioned(). No need to
        dirty positioned children as this is handled by the containing block chain through layoutPositionedObjects
        (layoutPositionedObjects): always relayout fixed objects.
