@@ -233,7 +233,7 @@ void CSSStyleSheetImpl::determineNamespace(Q_UINT32& id, const DOM::DOMString& p
         return;
 
     if (prefix.isEmpty())
-         id = makeId(noNamespace, localNamePart(id)); // No namespace. If an element/attribute has a namespace, e won't match it.
+         id = makeId(emptyNamespace, localNamePart(id)); // No namespace. If an element/attribute has a namespace, we won't match it.
     else if (prefix == "*")
         id = makeId(anyNamespace, localNamePart(id)); // We'll match any namespace.
     else {
