@@ -1050,13 +1050,15 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
         Q_UINT16 selLocalName = localNamePart(sel->tag);
         Q_UINT16 selNS = namespacePart(sel->tag);
 
-        if (localName <= ID_LAST_TAG && e->isHTMLElement())
-            ns = xhtmlNamespace; // FIXME: Really want to move away from this complicated hackery and just
-                                 // switch tags and attr names over to AtomicStrings.
+        if (localName <= ID_LAST_TAG && ns == defaultNamespace) {
+            assert(e->isHTMLElement());
+            ns = xhtmlNamespace;
+        }
 
-        if ((selLocalName != anyLocalName && localName != selLocalName) ||
-            (selNS != anyNamespace && ns != selNS))
-            return false;
+        // match on local
+        if (selLocalName != anyLocalName && localName != selLocalName) return false;
+        // match on namespace
+        if (selNS != anyNamespace && ns != selNS) return false;
     }
 
     DOM::DocumentImpl* doc = e->getDocument();
