@@ -521,7 +521,7 @@ void ElementImpl::close()
 
     if (!getDocument()->renderer())
         return; // the document is about to be destroyed
-    
+
     if (m_restyleChildrenLate) {
         NodeImpl *e = firstChild();
         while(e) {
@@ -682,7 +682,6 @@ void ElementImpl::updateId(DOMStringImpl* oldId, DOMStringImpl* newId)
     if (!inDocument())
         return;
 
-    DocumentImpl* doc = getDocument();
     if (oldId && oldId->l)
         removeId(DOMString(oldId).string());
 
@@ -918,7 +917,7 @@ NodeImpl *NamedAttrMapImpl::getNamedItem ( NodeImpl::Id id, bool nsAware, DOMStr
     for (unsigned long i = 0; i < m_attrCount; i++) {
 	if ((m_attrs[i].id() & mask) == id) {
             // if we are called with a qualified name, filter out NS-aware elements with non-matching name.
-            if (qName && (m_attrs[i].id() & NodeImpl_IdNSMask) &&
+            if (qName && (namespacePart(m_attrs[i].id()) != defaultNamespace) &&
                 strcasecmp(m_attrs[i].name(), DOMString(qName)))
                 continue;
 	    return m_attrs[i].createAttr(m_element,m_element->docPtr());
@@ -946,7 +945,7 @@ Node NamedAttrMapImpl::removeNamedItem ( NodeImpl::Id id, bool nsAware, DOMStrin
     for (unsigned long i = 0; i < m_attrCount; i++) {
 	if ((m_attrs[i].id() & mask) == id) {
             // if we are called with a qualified name, filter out NS-aware elements with non-matching name.
-            if (qName && (m_attrs[i].id() & NodeImpl_IdNSMask) &&
+            if (qName && (namespacePart(m_attrs[i].id()) != defaultNamespace) &&
                 strcasecmp(m_attrs[i].name(), DOMString(qName)))
                 continue;
 	    id = m_attrs[i].id();
@@ -1012,13 +1011,13 @@ Node NamedAttrMapImpl::setNamedItem ( NodeImpl* arg, bool nsAware, DOMStringImpl
     for (unsigned long i = 0; i < m_attrCount; i++) {
 	if ((m_attrs[i].id() & mask) == id) {
             // if we are called with a qualified name, filter out NS-aware elements with non-matching name.
-            if (qName && (m_attrs[i].id() & NodeImpl_IdNSMask) &&
+            if (qName && (namespacePart(m_attrs[i].id()) != defaultNamespace) &&
                 strcasecmp(m_attrs[i].name(), DOMString(qName)))
                 continue;
 	    // Attribute exists; replace it
 	    if (id == ATTR_ID)
 	       m_element->updateId(m_attrs[i].val(), attr->val());
-	    
+
 	    Node replaced = m_attrs[i].createAttr(m_element,m_element->docPtr());
 	    m_attrs[i].free();
 	    m_attrs[i].m_attrId = 0; /* "has implementation" flag */
@@ -1084,7 +1083,7 @@ DOMStringImpl *NamedAttrMapImpl::getValue(NodeImpl::Id id, bool nsAware, DOMStri
     for (unsigned long i = 0; i < m_attrCount; i++)
         if ((m_attrs[i].id() & mask) == id) {
             // if we are called with a qualified name, filter out NS-aware elements with non-matching name.
-            if (qName && (m_attrs[i].id() & NodeImpl_IdNSMask) &&
+            if (qName && (namespacePart(m_attrs[i].id()) != defaultNamespace) &&
                 strcasecmp(m_attrs[i].name(), DOMString(qName)))
                 continue;
             return m_attrs[i].val();
@@ -1111,7 +1110,7 @@ void NamedAttrMapImpl::setValue(NodeImpl::Id id, DOMStringImpl *value, DOMString
     for (unsigned long i = 0; i < m_attrCount; i++) {
 	if ((m_attrs[i].id() & mask) == mid) {
             // if we are called with a qualified name, filter out NS-aware elements with non-matching name.
-            if (qName && (m_attrs[i].id() & NodeImpl_IdNSMask) &&
+            if (qName && (namespacePart(m_attrs[i].id()) != defaultNamespace) &&
                 strcasecmp(m_attrs[i].name(), DOMString(qName)))
                 continue;
 	    if (prefix)
