@@ -98,9 +98,10 @@ private:
 #define NodeImpl_IdNSMask    0xffff0000
 #define NodeImpl_IdLocalMask 0x0000ffff
 
-const Q_UINT16 noNamespace = 0;
-const Q_UINT16 anyNamespace = 0xffff;
+const Q_UINT16 defaultNamespace = 0;
 const Q_UINT16 xhtmlNamespace = 1;
+const Q_UINT16 emptyNamespace = 2;
+const Q_UINT16 anyNamespace = 0xffff;
 const Q_UINT16 anyLocalName = 0xffff;
 
 inline Q_UINT16 localNamePart(Q_UINT32 id) { return id & NodeImpl_IdLocalMask; }
@@ -452,7 +453,7 @@ protected:
     bool m_inDocument : 1;
     bool m_hasAnchor : 1;
     bool m_specified : 1; // used in AttrImpl. Accessor functions there
-    
+
     bool m_focused : 1;
     bool m_active : 1;
     bool m_implicit : 1; // implicitely generated by the parser
@@ -558,7 +559,7 @@ public:
     struct Cache: public khtml::Shared<Cache>
     {
         static Cache* make() { return new Cache; }
-    
+
         CacheKey key;//### We must store this in here due to QCache in Qt3 sucking
 
         unsigned int version;
@@ -570,7 +571,7 @@ public:
         unsigned int position;
         unsigned int length;
         bool         hasLength;
-        
+
         void updateNodeListInfo(DocumentImpl* doc);
 
         virtual void clear(DocumentImpl* doc);
@@ -595,7 +596,7 @@ protected:
     NodeImpl *recursiveItem    ( NodeImpl* absStart, NodeImpl *start, unsigned long &offset ) const;
     NodeImpl *recursiveItemBack( NodeImpl* absStart, NodeImpl *start, unsigned long &offset ) const;
 
-    // Override this to determine what nodes to return. Set doRecurse to 
+    // Override this to determine what nodes to return. Set doRecurse to
     // false if the children of this node do not need to be entered.
     virtual bool nodeMatches( NodeImpl *testNode, bool& doRecurse ) const = 0;
 
@@ -606,9 +607,9 @@ protected:
 class ChildNodeListImpl : public NodeListImpl
 {
 public:
- 
+
     ChildNodeListImpl( NodeImpl *n);
-    
+
 protected:
     virtual bool nodeMatches( NodeImpl *testNode, bool& doRecurse ) const;
 };
